--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl:
 title: Fariqussalam Site  
 author: Fariqussalam Malik
 description: Fariq Personal blog and resume
-avatar: profile.png
+avatar: newprofile.png
 email: fariqussalam@live.com
 github: fariqussalam # username
 twitter: fariqussalam
